--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ li {
     background-color: #23551a;
     height: 1100px;
     width: 220px;
-    margin-top: -354px;
+    margin-top: -474px;
 }
 .jogosTabela {
     border-bottom: 4px solid #1e4418;
@@ -94,6 +94,7 @@ li {
     position: relative;
     display: flex;
     display: none;
+    z-index: 2;
 }
 .loginInputs {
     color: white;
@@ -101,14 +102,17 @@ li {
     margin-left: 30px;
 }
 .containerCadastro {
-    border:2px solid #0c0e0c;
+    border-radius: 10px;
     height: 350px;
     width: 500px;
     position: relative;
     display: flex;
-    margin-left: 800px;
-    background-color: #131613;
+    margin-left: 370px;
+    margin-top: 120px;
+    background-color: #3d493d;
     display: none;
+    box-shadow: 1px 2px 10px 2px #000000;
+    z-index: 1;
 }
 .containerLoginHide {
     height: 354px;
@@ -116,6 +120,7 @@ li {
     position: relative;
     display: flex;
     margin-left: 1300px;
+    margin-top: 120px;
     display: block;
 
 }
@@ -129,9 +134,9 @@ li {
     font-weight: 700;
 }
 .inputsCadastro {
-    border: 2px solid black;
+    border: 2px solid #556455;
     outline: none;
-    background-color: #303830;
+    background-color: #272c27;
     height: 25px;
     width: 220px;
     margin-left: 13px;
@@ -184,7 +189,7 @@ li {
     display: flex;
     justify-content: center;
     margin-top: 10px;
-    color: #303830;
+    color: #242924;
     cursor: pointer;
 }
 .abrirJogos {
