--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -100,7 +100,7 @@ li#nomeUsuario {
     border-bottom: 4px solid #1e4418;
     height: 45px;
     cursor: pointer;
-    color: #052700;
+    color: #ffffff;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -265,6 +265,7 @@ li#nomeUsuario {
 }
 .depositar {
     background-color: rgb(0, 194, 0);
+    border: 2px solid #26e200;
     color: white;
     border-radius: 20px;
     height: 30px;
@@ -278,14 +279,22 @@ li#nomeUsuario {
 }
 .sacar {
     background-color: #000000;
+    border: 2px solid #505050;
     color: white;
     border-radius: 20px;
     height: 30px;
     width: 90px;
     margin-left: 100px;
-    margin-top: -30px;
+    margin-top: -34px;
     text-align: center;
     cursor: pointer;    
+}
+.jogoJogo {
+    border-bottom: 2px solid rgb(20, 20, 20);
+    display: flex;
+    justify-content: center;
+    color: white;
+    cursor: pointer;
 }
 ::-webkit-scrollbar {
     width: 10px;
