--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -56,7 +56,7 @@ li {
     color: #2ccf0b;
 }
 li#nomeUsuario {
-    margin-left: 835px;
+    margin-left: 790px;
     margin-top: 2px;
 }
 .header {
@@ -271,6 +271,7 @@ li#nomeUsuario {
     height: 30px;
     width: 90px;
     margin-left: 0px;
+    margin-top: -2px;
     cursor: pointer;
     font-size: 19px;
     text-align: center;
