campo deposito att

--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -128,7 +128,7 @@ li#nomeUsuario {
     border-radius: 10px;
     height: 350px;
     width: 500px;
-    position: relative;
+    position: fixed;
     display: flex;
     margin-left: 440px;
     margin-top: 80px;
@@ -142,10 +142,102 @@ li#nomeUsuario {
     width: 500px;
     position: relative;
     display: flex;
-    margin-left: 1000px;
+    margin-left: 1600px;
     margin-top: 120px;
     display: block;
 
+}
+.containerFormas {
+    height: 60px;
+    width: 90%;
+    margin-left: 4.5%;
+    margin-top: 15px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.formas {
+    border: 2px solid rgb(56, 56, 56);
+    background-color: rgb(27, 27, 27);
+    color: white;
+    border-radius: 5px;
+    width: 120px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    cursor: pointer;
+}
+.qtdDepo {
+    margin-left: 160px;
+} 
+.qtdText {
+    margin-left: 165px;
+    color: white;
+    font-size: 15px;
+}
+.cartao {
+    opacity: 0.7;
+}
+.cartaoForm {
+    display: block; 
+    margin-top: 5px;
+}
+.cartaoInput {
+    width: 220px;
+    height: 35px;
+    margin-left: 10px;
+    margin-top: 5px;
+    border-radius: 5px;
+    outline: none;
+    background-color: #323232;
+    color: white;
+    font-size: 20px;
+}
+.qtdInput {
+    width: 150px;
+    height: 20px;   
+}
+.cartaoInf {
+    color: white;
+    margin-left: 20px;
+    margin-top: 20px;    
+}
+.botaoCartao {
+    margin-top: 15px;
+    margin-left: 150px;
+    height: 40px;
+    width: 200px;
+    font-size: 20px;
+    background-color: #1ca600;
+    border: 2px solid #2bff00;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+}
+.boleto {
+    opacity: 1;
+}
+.boletoForm {
+    display: none;
+}
+.pix {
+    justify-content: center;
+    margin-right: 0px;
+    opacity: 1;
+}
+.pixForm {
+    display: none;
+}
+.cartaoLogo {
+    width: 30px;
+    margin-left: -0px;
+}
+.boletoLogo {
+    width: 25px;
+}
+.pixLogo {
+    margin-left: -10px;
 }
 .cadastreSe {
     color: rgb(0, 175, 0);
