--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -394,6 +394,10 @@ li#nomeUsuario {
     display: none;
     z-index: 2;
 }
+.imagemSaque {
+    height: 35px;
+    margin-left: 146px;
+}
 .depositar {
     background-color: rgb(0, 194, 0);
     border: 2px solid #26e200;
@@ -451,6 +455,7 @@ li#nomeUsuario {
     position: relative;
     justify-content: center;
     align-items: center;
+    margin-top: 5px;
 }
 .saqueInput {
     width: 320px;
@@ -473,4 +478,5 @@ li#nomeUsuario {
     margin-top: 15px;
     cursor: pointer;
     font-size: 20px;
+    border-radius: 5px;
 }
