--- a/site/public/css/mines.css
+++ b/site/public/css/mines.css
@@ -46,8 +46,8 @@
     margin-left: 25px;
     font-size: 15px;
     margin-top: 250px;
-    background-color: rgb(190, 0, 0);
-    border: 2px solid red;
+    background-color: rgb(0, 141, 0);
+    border: 2px solid green     ;
     border-radius: 5px;
     color: white;
     cursor: default;
