--- a/site/public/css/mines.css
+++ b/site/public/css/mines.css
@@ -1,3 +1,42 @@
+.metricas {
+    border: 2px solid rgb(43, 43, 43);
+    background-color: rgb(87, 87, 87);
+    position: fixed;
+    height: 100px;
+    width: 200px;
+    right: 20px;
+    top: 85px;
+    display: none;
+    font-size: 13px;
+}
+.qtdRes {
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(190, 190, 190);
+    font-size: 30px;
+}
+.qtdInicial {
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+}
+.qtdInicio {
+    width: 100px;
+    justify-content: center;
+    align-items: center;
+    color: rgb(190, 190, 190);
+    margin-left: -3px;
+}
+.qtdAposta {
+    width: 100px;
+    justify-content: center;
+    align-items: center;
+    color: rgb(190, 190, 190);
+}
 .gameContainerMines {
     border: 2px solid rgb(116, 116, 116);
     background-color: rgb(46, 46, 46);
