--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -488,24 +488,24 @@ li#nomeUsuario {
 }
 .nomeHist {
     margin-left: 10px;
-    width: 50px;
+    width: 200px;
+    position: relative;
 }
 .regHist {
-    margin-left: 50px;
-    width: 50px;
-    color: rgb(0, 226, 0);
+    color: #1ca600;
+    margin-left: 100px;
 }
 .multiHist {
-    margin-left: 30px;
-    width: 50px;
-    color: rgb(0, 184, 0);
+    color: #2cc90d;
+    margin-left: 420px;
+    position: absolute;
 }
 .jogoHist {
-    margin-left: 20px;
-    width: 50px;
-    color: rgb(196, 196, 196);
+    color:#222222;
+    margin-left: 500px;
+    position: absolute;
 }
 .horarioHist {
-    margin-left: 500px;
-    width: 200px;
+    margin-left: 810px;
+    position: absolute;
 }
